# Multithreaded-TCP-Server

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  combined_code.txt
.claude/: settings.local.json
include/: Config.hpp  ConnectionHandler.hpp  CpuAffinity.hpp  EventLoop.hpp  Fiber.hpp  FiberContext.hpp  HttpStatus.hpp  Logger.hpp  Security.hpp  TcpServer.hpp  Telemetry.hpp  ThreadPool.hpp
logs/: system_05_25_2026_11_01_52.csv  system_05_25_2026_13_05_04.csv  system_06_08_2026_14_40_21.csv  system_06_08_2026_15_41_46.csv  system_06_09_2026_17_33_25.csv  system_06_13_2026_21_45_29.csv  system_06_14_2026_13_52_38.csv  system_06_14_2026_15_12_41.csv  system_06_14_2026_19_18_33.csv  system_06_14_2026_19_28_18.csv  system_06_14_2026_20_45_10.csv  system_06_20_2026_20_54_09.csv  system_06_20_2026_20_56_44.csv  system_06_20_2026_21_17_11.csv  system_06_20_2026_21_17_33.csv  system_06_20_2026_21_28_59.csv  system_06_20_2026_21_38_40.csv  system_06_20_2026_21_45_44.csv  system_06_20_2026_21_56_06.csv  system_06_20_2026_22_46_11.csv  system_06_20_2026_22_50_49.csv  system_06_20_2026_23_17_13.csv  system_06_20_2026_23_28_20.csv  system_06_20_2026_23_32_36.csv  system_06_21_2026_13_43_30.csv  system_06_25_2026_02_02_08.csv  system_06_25_2026_02_02_39.csv  system_06_25_2026_02_05_19.csv  traffic_05_25_2026_11_01_52.csv  traffic_06_08_2026_14_40_21.csv  traffic_06_08_2026_15_41_46.csv  traffic_06_09_2026_17_33_25.csv  traffic_06_13_2026_21_45_29.csv  traffic_06_14_2026_13_52_38.csv  traffic_06_14_2026_15_12_41.csv  traffic_06_14_2026_19_18_33.csv  traffic_06_14_2026_19_28_18.csv  traffic_06_14_2026_20_45_10.csv  traffic_06_20_2026_23_17_13.csv  traffic_06_20_2026_23_28_20.csv  (+4 more)
src/: ConnectionHandler.cpp  Fiber.cpp  Logger.cpp  Security.cpp  TcpServer.cpp  ThreadPool.cpp  main.cpp
src/asm/: get_rsp_win_x64.S  switch_sysv_x64.S  switch_win_x64.S
src/io/: affinity_linux.cpp  affinity_mac.cpp  affinity_win.cpp  epoll_linux.cpp  iocp_win.cpp  kqueue_mac.cpp  telemetry_posix.cpp  telemetry_win.cpp
tests/: test_connection_handler.cpp  test_fiber_alignment.cpp  test_fiber_scheduler.cpp  test_iocp_accept.cpp  test_security.cpp  test_telemetry.cpp
